thesis final, backup

--- a/final/final.tex
+++ b/final/final.tex
@@ -88,7 +88,7 @@ Dr. Richard Stern, Dr. Thomas Sullivan \\
 
 %\doublespacing
 \begin{abstract}
-We propose and evaluate an additional guitar string classification method for inharmonicity-based automatic tablature transcription using only audio. We characterize each guitar string as the linear trajectory of its log-inharmonicity with respect to its fundamental pitch, then assign unseen notes to the strings whose trajectories best approximate the notes' estimated inharmonicities. Results from classical, acoustic, and electric guitars in the RWC instruments dataset show that this method generalizes slightly better for test guitars on which the system wasn't exclusively trained than does the existing inharmonicity-based approach. We also derive and evaluate an inharmonicity compensation feature to allow for transcription of arbitrarily-tuned guitars, provided the tuning is known. Performance increases on personal recordings of alternate-tuned guitars validate this tuning adjustment feature.
+We propose and evaluate an additional inharmonicity-based guitar string classification method using only audio. We characterize each guitar string as the linear trajectory of its log-inharmonicity with respect to its fundamental pitch, then assign unseen notes to the strings whose trajectories best approximate the notes' estimated inharmonicities. Results from classical, acoustic, and electric guitars in the RWC instruments dataset show that this method performs slightly better than the benchmark inharmonicity-based method for test guitars on which the system wasn't exclusively trained. We also derive and evaluate an inharmonicity compensation feature to allow for tablature transcription of arbitrarily-tuned guitars, provided the tuning is known. Performance increases on personally recorded alternately-tuned guitars validate this tuning adjustment feature.
 
 \end{abstract}
 %\singlespacing
@@ -155,9 +155,11 @@ Tablature (abbr. tabs) is widely more popular than scores for a number of likely
 
 Accurate tablature transcription is a fairly laborious task, however. Dependable tabs containing few errors typically require a seasoned musician's careful listening to an audio recording, and possibly video recordings for additional consultation too. Reliable automation of this transcription task would benefit the guitar student community by expediting quality tab generation and unearthing fretboard positions of guitar riffs in songs for which accurate tabs don't yet exist. Recent technologies proposed to encourage proliferation of accessible tab transcription systems, such as web framework Robotaba~\cite{burlet2013}, demonstrate a desire among MIR researchers to see this theoretically mature but practically nascent field mature into student-benefitting applications. 
 
-This work builds on existing researchers' tablature transcription systems through proposal of an alternative method by which the string of an unseen note can be ascertained. We argue that our method performs slightly better than does a similar state-of-the-art system when trained on a more diverse set of reference guitars. In other words, this method's generalization is slightly better; the previous solution excels when transcribing the exact guitar on which it was trained, but ours edges ahead once the training set is made to include multiple guitars in the same class as the test guitar's.
+An important feature in systems that transcribe tablature from audio input is inharmonicity. Briefly, inharmonicity is a phenomenon that skews a vibrating string's harmonic partials upwards in frequency and whose variation trend is somewhat unique per string. Because of this, it is highly discriminative and has successfully been used as the sole feature in a transcription system by a team whose work~\cite{barbanchoi2012} we consider the benchmark inharmonicity-based method. This is discussed further in Chapter~\ref{chap:lit-review}, but for now its introduced simply for context.
 
-In the next chapter, we survey previous work in the field of automatic tablature transcription, highlighting one team in particular who successfully used a singular feature known as inharmonicity and whose work inspired ours. This is followed by a motivation of inharmonicity's suitability for the string discrimination task, and a review of the literature on inharmonicity estimation. In Chapter~\ref{chap:method}, we introduce our system in detail. Chapter~\ref{chap:experiments} reports the results of our experiments, and Chapter~\ref{chap:discussion} contains analysis of the results, threats to validity, and future work. We summarize this work in Chapter~\ref{chap:conclusion}.
+This work builds on the benchmark method. We propose an alternative procedure to exploit the inharmonicity of an unseen note for string classification: we assign to it the string whose pre-computed log-inharmonicity trajectory predicts the note's estimated log-inharmonicity with minimal error. We evaluate the extent to which our performance differs from that of the benchmark system, focusing specifically on two cases: when the systems have been trained on recordings of only the test guitar, and when the systems have been trained on recordings of multiple guitars including the test guitar (all of which were in the same classical, acoustic, or electric class). Results show that although the benchmark system excels in the former case, ours succeeds in the latter, suggesting our method's greater generalizability. Additionally, this work introduces an inharmonicity compensation factor that allows for successful transcription of guitars whose tunings differ from those of the training set, provided that the alternate-tunings are known. Experiments on two personally recorded guitars in various tunings reveal that our compensation factor can restore an arbitrarily-tuned guitar's transcription performance to that of its more accurately transcribed standard-tuned trial.
+
+In the next chapter, we survey previous work in the field of automatic tablature transcription, highlighting the benchmark inharmonicity-based method. This is followed by a more substantial motivation of inharmonicity's suitability for the string discrimination task and a review of the literature on inharmonicity estimation. In Chapter~\ref{chap:method}, we introduce our system in detail. Chapter~\ref{chap:experiments} reports the results of our experiments, and Chapter~\ref{chap:discussion} contains analysis of the results, threats to validity, and future work. We summarize this work in Chapter~\ref{chap:conclusion}.
 
 \noindent
 \chapter{Previous Work}
@@ -258,6 +260,8 @@ Solving for $\beta$ yields
 which defines the inharmonicity of a note in terms of an arbitrary two partials $k$ and $m$ and their corresponding frequencies $f_k$ and $f_m$.
 
 The MAT algorithm first pre-processes a note with the Complex Spectral Phase Evolution (CSPE) method~\cite{short2006} to refine the subsequent frequency estimates. The inharmonicity routine then begins by locating partials 1 and 2 in this refined spectrum based on a user-input estimate of the fundamental. Searching for these partials is straightforward, since the skew effect of inharmonicity is low for small indices. From these locations,~\eqref{mat8} is used for every combination of the located partials (which for this first iteration, is only one) to obtain an array of $\beta$ estimates. The median of the $\beta$ array is returned as the composite $\beta$ estimate of this iteration, and this median together with the partials' locations are used in~\eqref{mat6} to obtain an array of revised $f_0$ estimates that contains as many elements as partials under consideration. Finally, the median of this $f_0$ array and the median of the $\beta$ array are used in equation~\eqref{eq:fk} to predict the frequency of the next partial for which to search, which is the third in this case. At succeeding iterations, the lengths of these $f_0$ and $\beta$ arrays grow longer (since both the number of partials, and therefore the number of combinations of partials pairs, increases), and the estimates which they contain grow increasingly more accurate. The algorithm is summarized in the flowchart in Figure~\ref{fig:mat-flowchart}, taken from ~\cite{hodgkinson2009}. MAT determines the ideal number of partials for which to search by finding the highest partial index that lies above the average level of the magnitude spectrum, and terminates once this partial index is reached. The result is an efficient and accurate inharmonicity estimation routine. 
+
+We apply the MAT estimation procedure to five consecutive 100ms windows of audio, starting from detection of a note onset. This yields five inharmonicity estimates which we aggregate into one effective result using the frame aggregation process described in Section~\ref{sec:string-classification}.
 \begin{figure}[!htbp] 
 \label{fig:mat-flowchart}
 \centering
@@ -395,6 +399,7 @@ In words, equation~\eqref{eq:3.20} tells us that the effect of a string's altern
 \end{figure}
 
 \section{String Classification}
+\label{sec:string-classification}
 The next step is to use these learned string trajectories to classify unknown notes. Since these trajectories tell us how to expect different strings' inharmonicities to vary with respect to pitch, we think of string classification in this context as simply determining which trajectory or line best approximates the unseen note's inharmonicity estimate. To this end, we simply assign a note to the trajectory that minimizes the reconstruction error. 
 
 Other decision functions were considered before deciding on residual minimization. We considered using a two-dimensional Euclidean distance metric, but ultimately steered away because it wasn't true to the physical phenomenon -- expected inharmonicity on a fixed string should be a function of only one variable, namely pitch, so incorporating an additional degree of freedom seems inappropriate. Indeed, one can easily imagine situations where the Euclidean distance between a note's inharmonicity estimate and an erroneous string is smaller than the one-dimensional residual between it and its true string, thereby producing an incorrect string classification. 
@@ -445,7 +450,7 @@ Below in Figure~\ref{fig:overview}, we summarize the operation of our system. In
 \section{Benchmark RWC Evaluation}
 %We used subsets of the Real World Corpus' Music Instrument Database (RWC-MDB-I)~\cite{goto2003}, subsets of the Fraunhofer Institute for Digital Media Technology's Semantic Music Technologies guitar dataset (IDMT-SMT)~\cite{asdf}, and personal recordings of an electric guitar to conduct our experiments. 
 
-We used subsets of the Real World Corpus Music Instrument Database (RWC-MDB-I)~\cite{goto2003} and personal recordings of an electric guitar to conduct our experiments. 
+We used subsets of the Real World Corpus Music Instrument Database (RWC-MDB-I)~\cite{goto2003} and personal recordings of an electric and acoustic guitar to conduct our experiments. 
 
 Our RWC subset comprised nine guitar recordings (three classical, three acoustic, and three electric), each of which were performed twelve times exhibiting various permutations of particular musicality parameters (playing style, dynamic level, pickup selection). For our work, we used only six of the twelve recordings for each of the electric guitars, as the discarded ones featured musicality parameters like vibrato and palm-muting that weren't featured in the classical and acoustic sets. The performances themselves were simply clean, isolated, monophonic enumeration of every fret (from open-string to 12th fret) on every string (from string 6 to string 1), constituting 78 total note plucks per audio file. The resolution is 16 bits per sample, at 44.1kHz. Labels of strings and frets are thus obtained by their location of occurrence in the recording. The classical guitars recorded were a Stafford, a Sakurai Kohno Professional-J, and a Yuichi Imai YJ-II; the three acoustic guitars captured were an Ovation, a Yamaha APX, and Yairi WY1; the electric guitars featured were a Fender Stratocaster, an Aria PE, and an Ibanez Artcore.
 
@@ -453,7 +458,7 @@ Our RWC subset comprised nine guitar recordings (three classical, three acoustic
 
 We also recorded a Fender Telecaster (electric guitar) and a Takamine G-series (acoustic guitar) at 16 bits and 44.1kHz in the same vein as the RWC database: string and fret enumeration, totaling 78 notes per recording. We captured various tunings: standard, ``DADGAD" (in which the open pitches of strings 6 through 1 are given by the respective letters in name), ``WSU" (whole-step up), and ``WSD" (whole-step down). The Fender, which was recorded directly into our audio interface, was performed with a thick plectrum at center pickup orientation and at similar moderate dynamic levels throughout. We recorded the Takamine in an isolated acoustic chamber with a large diaphragm condenser microphone (an MXL 990) placed 12 inches away from fret 12, and we also played it with a thick plectrum and at constant dynamic levels. Analog-to-digital hardware included a Focusrite Saffire Pro 24 and a 2011 Macbook Pro running Logic. No other musicality parameters were captured; we focused on tuning variance here.
 
-Our first experiment was a benchmark comparison of our classification method (residual error of each string's trajectory) to Barbancho's classification method (partials coincidence tally, or PCT). This experiment used \textit{theoretical} inharmonicity trajectories. For each guitar in our RWC subset, we obtained log-inharmonicity estimates of its open-string notes from two-thirds of its recordings, then performed string classification on the remaining third using residual error minimization on the theoretical trajectories, as discussed in Chapter~\ref{chap:method}. We repeated this twice with different folds for three-fold cross validation, and averaged each fold's probability of an erroneous transcription to produce composite error probabilities. These are reported under the ``theo." column of the ``Guitar-specific $\beta$'s" heading in Table~\ref{tab:error-results-RWC}. This experiment was also repeated for more general inharmonicity contexts: we estimated log-inharmonicity for the open-string notes of two-thirds of the test guitar's recordings, in addition to all of the open-string notes belonging to the other guitars in the same class. As before, we performed three-fold cross validation on the test guitar's recordings, and report error probabilities under the ``theo." column of the ``Guitar-averaged $\beta$'s" heading. This heading is named as such because the effect of learning from all three guitars is an ``averaging" of their open-string notes' inharmonicities.
+Our first experiment was comparison of our classification method (residual error of each string's trajectory) to the benchmark classification method (partials coincidence tally, or PCT). This experiment used \textit{theoretical} inharmonicity trajectories. For each guitar in our RWC subset, we obtained log-inharmonicity estimates of its open-string notes from two-thirds of its recordings, then performed string classification on the remaining third using residual error minimization on the theoretical trajectories, as discussed in Chapter~\ref{chap:method}. We repeated this twice with different folds for three-fold cross validation, and averaged each fold's probability of an erroneous transcription to produce composite error probabilities. These are reported under the ``theo." column of the ``Guitar-specific $\beta$'s" heading in Table~\ref{tab:error-results-RWC}. This experiment was also repeated for more general inharmonicity contexts: we estimated log-inharmonicity for the open-string notes of two-thirds of the test guitar's recordings, in addition to all of the open-string notes belonging to the other guitars in the same class. As before, we performed three-fold cross validation on the test guitar's recordings, and report error probabilities under the ``theo." column of the ``Guitar-averaged $\beta$'s" heading. This heading is named as such because the effect of learning from all three guitars is an ``averaging" of their open-string notes' inharmonicities.
 
 Our second experiment was an evaluation of our classification method using \textit{empirical} inharmonicity trajectories, or inharmonicity regressions. For each of the guitars in our RWC subset, we obtained log-inharmonicity estimates of \textit{all} labeled notes from two-thirds of its total recordings, then performed bisquare weighted regression against their pitches. String classification was performed on the remaining third using residual error minimization on the regressions, as discussed in Chapter~\ref{chap:method}. We repeat this using the same number of folds as the first experiment, and report error probabilities for each guitar under the ``empi." column of the ``Guitar-specific $\beta$'s" heading in~\ref{tab:error-results-RWC}. Again, we also evaluate regressions learned from all three guitars in the same class as the test guitar's, using the same cross-validation configuration. These results are reported under the ``empi." column of the ``Guitar-averaged $\beta$'s".
 
@@ -633,6 +638,8 @@ In standard tuning, strings 6 through 1 are tuned to E2, A2, D3, G3, B3, and E4.
 \begin{center}
 \begin{tabular}{||c||c||c|c||c|c||c|c||}
 \hline
+\multicolumn{8}{|c|}{\bf{Alternate-tuning Transcription F1-scores (Electric)}} \\
+\hline
 & Standard & \multicolumn{2}{|c|}{``DADGAD"} & \multicolumn{2}{|c|}{``WSU"} & \multicolumn{2}{|c|}{``WSD"} \\
 \hline
 String No. & orig. & orig. & comp. & orig. & comp. & orig. & comp. \\
@@ -661,6 +668,8 @@ Overall: & 0.86 & 0.74 & 0.83 & 0.65 & 0.83 & 0.67 & 0.85\\
 \begin{table}[!htbp]
 \begin{center}
 \begin{tabular}{||c||c||c|c||c|c||c|c||}
+\hline
+\multicolumn{8}{|c|}{\bf{Alternate-tuning Transcription F1-scores (Acoustic)}} \\
 \hline
 & Standard & \multicolumn{2}{|c|}{``DADGAD"} & \multicolumn{2}{|c|}{``WSU"} & \multicolumn{2}{|c|}{``WSD"} \\
 \hline
@@ -699,7 +708,7 @@ Although we performed worse than PCT for the case when training and testing were
 
 Interestingly, classification using regressions on inharmonicity estimates collected from a single guitar generally performed worse than classification with the theoretical trajectories obtained from the open-string inharmonicity estimates of the same guitar. (Compare columns ``theo." and ``empi." under the ``Guitar-specific $\beta$'s" heading). This was contrary to our hypothesis that the regressions would more accurately capture the empirical trajectory than would the theoretical one.
 
-The alternate-tuning experiments validated our tuning compensation feature nicely. We see in Tables~\ref{tab:resultsTune} and~\ref{tab:ag-results-tune} that the general effect of appropriately scaling the inharmonicity regressions is to restore transcription F1-scores towards that of the original best-case standard-tuned performance.
+The alternate-tuning experiments validated our tuning compensation feature nicely. We see in Tables~\ref{tab:resultsTune} and~\ref{tab:results-ag-tune} that the general effect of appropriately scaling the inharmonicity regressions is to restore transcription F1-scores towards best-case standard-tuned performance.
 
 Insight into the error probabilities in Tables~\ref{tab:error-results-RWC} is gained when considering the string-wise breakdowns of F1-scores in Tables~\ref{tab:cg-str-f},~\ref{tab:ag-str-f}, and~\ref{tab:eg-str-f}. We see that across all guitars, strings 2, 3, and 4 consistently exhibit lower F1-scores. Strings 1, 5, and 6, contrastingly, exhibit exceptional performance, so we know that any poor results in Table~\ref{tab:error-results-RWC} stem from poor accuracy on these problematic ``middle" strings that are physically surrounded on the instrument by higher and lower strings. We thus see a flaw in this residual-based inharmonicity similarity approach: because of its inherently spatial classification decision (residual minimization), this system exhibits poor performance on strings whose trajectories share overlapping regions in inharmonicity-pitch space.
 
@@ -779,10 +788,6 @@ Additionally, we assumed perfect fundamental pitch estimation in this work. Our 
 
 Furthermore, the MAT inharmonicity estimation routine we used was different from Barbancho's. The credibility of the comparison between our results and theirs is thus somewhat compromised. It's quite possible that any performance gains observed in our implementation are due in part to potentially superior inharmonicity extraction. This is, unfortunately, a factor we didn't control for, and if time had allowed we should have replicated Barbancho's system and substituted their inharmonicity estimation step with MAT to produce results that were as comparable as possible.
 
-
-
-
-
 \section{Future Work}
 A potential area for run-time performance enhancement for tablature transcription systems is the use of musical context. Musical passages on the guitar tend to exhibit continuity; it's usually the case that a riff is played in a localized area of the fretboard, for example, instead of jumping around the length of the guitar neck. Transcription systems could apply these performance-borne simplifications to their output to potentially improve accuracy, say, when a stray note is transcribed a plausible yet questionable twelve frets away from the rest of those in the riff.
 
@@ -816,11 +821,11 @@ We paid special attention to the partial coincidence tally (PCT) transcription m
 
 After reiterating one of Barbancho's key realizations -- that inharmonicity along a given string was deterministic -- we showed that the logarithm of these trajectories was linear with respect to MIDI pitch. We consequently proposed characterizing guitar strings as their log-inharmonicity trajectories and performing classification (and therefore implicitly tablature transcription) by assigning to unknown notes the strings whose lines best approximated the notes' log-inharmonicities. Lastly, we derived the effect of a tuning change on these lines, and arrived at a general tuning-compensation feature applicable to any inharmonicity-based system.
 
-Next, we reported results from experiments on a subset of the RWC music instruments database and a couple personal guitar recordings. Benchmark comparisons against the PCT method using theoretical and empirical inharmonicity trajectories revealed that our method outperformed the state-of-the-art for acoustics and electrics when trained on guitars that included others besides the test guitar. Residual-minimization on inharmonicity trajectories therefore leverages the inharmonicity feature in a more generalizable fashion. We also validated our inharmonicity compensation feature, reporting accuracy increases on personal recordings of alternately-tuned guitars.
+Next, we reported results from experiments on a subset of the RWC music instruments database and a couple personal guitar recordings. Benchmark comparisons against the PCT method using theoretical and empirical inharmonicity trajectories revealed that our method outperformed the state-of-the-art for acoustics and electrics when trained on guitars that included others in addition to the test guitar. Residual-minimization on inharmonicity trajectories therefore leverages the inharmonicity feature in a more generalizable fashion. We also validated our inharmonicity compensation feature, reporting accuracy increases on personal recordings of alternately-tuned electric and acoustic guitars.
 
 A cursory investigation of the cause for the poorer electric guitar transcription performance revealed that inharmonicity estimation for the instrument is less reliable, and the electric guitars' pickups aren't to blame; it must rather be spectral nuances that confuse the inharmonicity estimation algorithm. We closed with limitations and future scope, cautioning against misinformed application of our reported results to real-world guitar scenarios, and highlighting musical context exploitation and different regression polynomials as potential areas for elaboration.
 
-In conclusion, characterizing guitar strings as log-inharmonicity trajectories against pitch and classifying notes by minimizing their trajectory residuals is an effective approach to tablature transcription. Most notably, it outperforms the state-of-the-art inharmonicity-based method on most of the RWC guitar classes when trained on reference guitars that include others besides the test guitar. Furthermore, adjusting inharmonicity estimates with the compensation factor introduced in this work is effective for improving transcription accuracy on alternately-tuned guitars.
+In conclusion, characterizing guitar strings as log-inharmonicity trajectories against pitch and classifying notes by minimizing their trajectory residuals is an effective approach to tablature transcription. Most notably, it outperforms the benchmark inharmonicity-based method on most of the RWC guitar classes when trained on reference guitars that include others in addition to the test guitar. Furthermore, adjusting inharmonicity estimates with the compensation factor introduced in this work is effective for improving transcription accuracy on alternately-tuned guitars.
 
 %We introduced an additional inharmonicity-based approach to guitar string classification and tablature transcription, based on characterizing guitar strings' inharmonicity trajectories with linear regressions against pitch. Classification is performed by assigning to an unknown note the index of the trajectory which best explains the note's inharmonicity. We reported transcription F1-score performance of $0.43$, $0.71$, and $0.62$ for classical, acoustic, and electric guitars in the RWC dataset. 
 
